// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GuideDrawer renders guide slide when a guide is selected 1`] = `
<div>
  <div
    class="sc-fMiknA lbopat"
    data-testid="guidesDrawer"
    id="guide-drawer"
  >
    <h4
      class="sc-dVhcbM fqmULc"
    >
      <span
        class="sc-fAjcbJ lkRQvt"
        data-testid="guidesBackButton"
      >
        <i
          class="sc-eilVRo gFBzhx"
        >
          <span
            class="SVGInline SVGInline--cleaned"
          >
            <svg
              class="SVGInline-svg SVGInline--cleaned-svg"
              style="width: 16px;height: 16px;"
            />
          </span>
        </i>
      </span>
      Neo4j Browser Guides
       
    </h4>
    <div
      class="sc-cHGsZl cfutWU"
    />
    <div
      class="sc-eqIVtm dYVEjy"
      title="Title"
    >
      Title
    </div>
    <div
      class="sc-jhAzac kHCFcG disable-font-ligatures"
    >
      <div>
        <div>
          Test Slide
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`GuideDrawer renders list view including Remote Guides list 1`] = `
<div>
  <div
    class="sc-fMiknA lbopat"
    data-testid="guidesDrawer"
    id="guide-drawer"
  >
    <h4
      class="sc-dVhcbM fqmULc"
    >
      Neo4j Browser Guides
       
    </h4>
    <div
      class="sc-cHGsZl cfutWU"
    />
    <div
      class="sc-jnlKLf kBISrJ slide"
      style="padding: 0px 15px;"
    >
      You can also access Browser guides by running
      <span
        class="sc-jWBwVP dpdnCs remove-play-icon"
        data-populate=":guide [guide name]"
      >
        :guide [guide name]
      </span>
      in the code editor.
      <div
        class="sc-krvtoX jZKaMc"
      >
        <div
          class="sc-kEYyzF kpIobp"
        >
          Built-in guides
        </div>
      </div>
      <div
        class="sc-lkqHmb jBjITi"
      >
        <li
          class="sc-cbkKFq ilCdUp"
          data-testid="builtInGuideintro"
        >
          <span
            class="sc-jWBwVP dpdnCs remove-play-icon"
          >
            :guide 
            intro
          </span>
          <div
            class="sc-krvtoX gDoQjI"
          >
             
            Navigating Neo4j Browser
             
          </div>
        </li>
        <li
          class="sc-cbkKFq ilCdUp"
          data-testid="builtInGuideconcepts"
        >
          <span
            class="sc-jWBwVP dpdnCs remove-play-icon"
          >
            :guide 
            concepts
          </span>
          <div
            class="sc-krvtoX gDoQjI"
          >
             
            Property graph model concepts
             
          </div>
        </li>
        <li
          class="sc-cbkKFq ilCdUp"
          data-testid="builtInGuidecypher"
        >
          <span
            class="sc-jWBwVP dpdnCs remove-play-icon"
          >
            :guide 
            cypher
          </span>
          <div
            class="sc-krvtoX gDoQjI"
          >
             
            Cypher basics - create, match, delete
             
          </div>
        </li>
        <li
          class="sc-cbkKFq ilCdUp"
          data-testid="builtInGuidemovie-graph"
        >
          <span
            class="sc-jWBwVP dpdnCs remove-play-icon"
          >
            :guide 
            movie-graph
          </span>
          <div
            class="sc-krvtoX gDoQjI"
          >
             
            Queries and recommendations with Cypher - movie use case}
             
          </div>
        </li>
        <li
          class="sc-cbkKFq ilCdUp"
          data-testid="builtInGuidenorthwind-graph"
        >
          <span
            class="sc-jWBwVP dpdnCs remove-play-icon"
          >
            :guide 
            northwind-graph
          </span>
          <div
            class="sc-krvtoX gDoQjI"
          >
             
            Translate and import relation data into graph
             
          </div>
        </li>
      </div>
      <div
        class="sc-krvtoX jZKaMc"
      >
        <div
          class="sc-kEYyzF kpIobp"
          data-testid="remoteGuidesTitle"
        >
          Remote Guides
        </div>
      </div>
      <div
        class="sc-lkqHmb jBjITi"
      >
        <li
          class="sc-dUjcNx SIWxf"
        >
          <span
            class="sc-jWBwVP dpdnCs remove-play-icon"
            data-testid="remoteGuideidentifier"
          >
            Title
          </span>
          <span
            class="sc-fOKMvo clXrDz"
            data-testid="removeGuideidentifier"
          >
            <i
              class="sc-gHboQg cYpCNN sl-bin"
            />
          </span>
        </li>
      </div>
      <div
        class="sc-fYiAbW jdVfDi"
      >
        <a
          class="sc-cvbbAY iQWpYr"
          href="https://neo4j.com/graphgists/"
          rel="noreferrer"
          target="_blank"
        >
          More guides
        </a>
      </div>
    </div>
  </div>
</div>
`;

exports[`GuideDrawer renders list view without Remote Guides 1`] = `
<div>
  <div
    class="sc-fMiknA lbopat"
    data-testid="guidesDrawer"
    id="guide-drawer"
  >
    <h4
      class="sc-dVhcbM fqmULc"
    >
      Neo4j Browser Guides
       
    </h4>
    <div
      class="sc-cHGsZl cfutWU"
    />
    <div
      class="sc-jnlKLf kBISrJ slide"
      style="padding: 0px 15px;"
    >
      You can also access Browser guides by running
      <span
        class="sc-jWBwVP dpdnCs remove-play-icon"
        data-populate=":guide [guide name]"
      >
        :guide [guide name]
      </span>
      in the code editor.
      <div
        class="sc-krvtoX jZKaMc"
      >
        <div
          class="sc-kEYyzF kpIobp"
        >
          Built-in guides
        </div>
      </div>
      <div
        class="sc-lkqHmb jBjITi"
      >
        <li
          class="sc-cbkKFq ilCdUp"
          data-testid="builtInGuideintro"
        >
          <span
            class="sc-jWBwVP dpdnCs remove-play-icon"
          >
            :guide 
            intro
          </span>
          <div
            class="sc-krvtoX gDoQjI"
          >
             
            Navigating Neo4j Browser
             
          </div>
        </li>
        <li
          class="sc-cbkKFq ilCdUp"
          data-testid="builtInGuideconcepts"
        >
          <span
            class="sc-jWBwVP dpdnCs remove-play-icon"
          >
            :guide 
            concepts
          </span>
          <div
            class="sc-krvtoX gDoQjI"
          >
             
            Property graph model concepts
             
          </div>
        </li>
        <li
          class="sc-cbkKFq ilCdUp"
          data-testid="builtInGuidecypher"
        >
          <span
            class="sc-jWBwVP dpdnCs remove-play-icon"
          >
            :guide 
            cypher
          </span>
          <div
            class="sc-krvtoX gDoQjI"
          >
             
            Cypher basics - create, match, delete
             
          </div>
        </li>
        <li
          class="sc-cbkKFq ilCdUp"
          data-testid="builtInGuidemovie-graph"
        >
          <span
            class="sc-jWBwVP dpdnCs remove-play-icon"
          >
            :guide 
            movie-graph
          </span>
          <div
            class="sc-krvtoX gDoQjI"
          >
             
            Queries and recommendations with Cypher - movie use case}
             
          </div>
        </li>
        <li
          class="sc-cbkKFq ilCdUp"
          data-testid="builtInGuidenorthwind-graph"
        >
          <span
            class="sc-jWBwVP dpdnCs remove-play-icon"
          >
            :guide 
            northwind-graph
          </span>
          <div
            class="sc-krvtoX gDoQjI"
          >
             
            Translate and import relation data into graph
             
          </div>
        </li>
      </div>
      <div
        class="sc-fYiAbW jdVfDi"
      >
        <a
          class="sc-cvbbAY iQWpYr"
          href="https://neo4j.com/graphgists/"
          rel="noreferrer"
          target="_blank"
        >
          More guides
        </a>
      </div>
    </div>
  </div>
</div>
`;
